fixes header on mobile

--- a/style.css
+++ b/style.css
@@ -472,6 +472,10 @@ button:active{
     }
 
     @media (max-width: 450px){
+
+        header {
+            height: 225px;
+        }
     
         .top-row {
             display: grid;
